--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
-theme: jekyll-theme-minimal
+url: "https://albinash-art.github.io"
+# url: "http://localhost:4000/"
+
+name: Albina Sh
+description: Personal Website
+
+markdown: kramdown
+highlighter: rouge
+
+excerpt_separator: <!--more-->  # you can specify your own separator, of course.
+
+paginate: 10
+paginate_path: "blog/page:num"
+permalink: pretty
